# OA_Alpha_v1.1_QC

./: .gitignore  .safety-policy.yml  BEFORE_AFTER_COMPARISON.md  BUILD.md  CICD_CHEATSHEET.md  CICD_IMPLEMENTATION_COMPLETE.md  CICD_QUICKSTART.md  DEPLOYMENT_CHECKLIST.md  GITHUB_ACTIONS_SUMMARY.md  INTEGRATION_GUIDE.md  LOCAL_BUILD_GUIDE.md  MODULE_OVERVIEW.md  NUITKA_MIGRATION_COMPLETE.md  README.md  README_DEPLOYMENT.md  README_GITHUB_CICD.md  README_MASTER.md  README_NUITKA.md  README_REFACTORED.md  README_SECURITY_HARDENED.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  SECURITY.md  SECURITY_HARDENING_COMPLETE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_QUICK_REFERENCE.md  TASK_COMPLETE.md  bounding_box_minimizer.py  build_local.sh  config.json  env.example  gui.py  gui_new.py  main_processor.py  pyproject.toml  rotation_learner.py  rotation_optimizer.py  run_gui.bat  run_gui.sh  run_optimizer.bat  (+9 more)
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/: ICON_GUIDE.md  README.md  icon.icns
src/core/: bounding_box.py  mesh_operations.py  rotation.py
src/gui/: blender_finder.py  license_dialog.py  main_window.py  splash_screen.py  theme.py  workers.py
src/io/: file_exporter.py  file_loader.py
src/learning/: rotation_learner.py
src/licensing/: __init__.py  lemonsqueezy.py  license_storage.py
src/optimization/: optimizer.py  pca_aligner.py  rotation_generator.py
src/positioning/: ground_positioner.py
src/security/: __init__.py  encryption.py  error_handler.py  secure_config.py  validators.py
src/utils/: config_manager.py  debugger.py  paths.py
